# quik

./: .gitignore  CMakeLists.txt  README (Java).md  README.md  pom.xml
data/assignments/: ground_truth_l40_p02_m100000_from_barcodes_l34_n100000.tsv  ground_truth_l40_p02_m10000_from_l34_n10000.tsv
data/barcodes/: barcodes_l34_n10.bc  barcodes_l34_n10000.bc
data/reads/: reads_l40_p02_m10000_from_l34_n10000.fq
src/: alignment_costs.h  arg_min.cuh  barcode.h  barcode_assignment.h  barcode_assignment_reader.h  barcode_assignment_writer.h  barcode_calling.cu  barcode_set.h  barcode_set_bc_reader.h  barcode_set_bc_writer.h  barcode_set_dev.cuh  base.h  benchmark_barcode_calling.cu  benchmark_sl_distance.cu  constants.h  constants.h.in  cuda_device.cuh  cuda_helper.cuh  debug.cu  determine_barcode_length.h  dna_tables.h  explicit_costs.h  extended_barcode_assignment.h  extended_barcode_assignment_writer.h  extended_base.h  index_element.h  k_mer_filtered_calling_gpu_v1.cuh  k_mer_filtered_calling_gpu_v2.cuh  k_mer_filtered_calling_gpu_v3.cuh  k_mer_filtered_calling_gpu_v4.cuh  k_mer_filtered_calling_gpu_v5.cuh  k_mer_filtered_calling_host_v1.h  k_mer_filtered_calling_host_v2.h  k_mer_map_dev.h  k_mer_map_dev_chunked.h  k_mer_map_dev_chunked_v2.h  k_mer_map_host.h  k_mer_map_host_v2.h  levenshtein_distance_v1.cuh  levenshtein_distance_v2.cuh  (+31 more)
src/calling_algorithms/: barcode_calling_algorithm.h  benchmark_barcode_calling.cu  dummy_algorithm_wait_1s.h  generic_multi_gpu_v1.cuh  k_mer_filter_host_default.cuh  k_mer_filter_host_v2.h  k_mer_filter_multi_gpu_default.cuh  k_mer_filter_multi_gpu_v1.cuh  k_mer_filter_single_gpu_default.cuh  k_mer_filter_single_gpu_v09.cuh  k_mer_filtered_calling_gpu_v4.cuh  k_mer_filtered_calling_gpu_v5.cuh  k_mer_filtered_calling_gpu_v6.cuh  k_mer_filtered_calling_host_v1.h  k_mer_filtered_calling_host_v2.h  k_mer_map_dev_v1.h  k_mer_map_host_v1.h  two_step_k_mer_filter_host_default.cuh  two_step_k_mer_filter_host_v1.h  two_step_k_mer_filter_multi_gpu_default.cuh  two_step_k_mer_filter_multi_gpu_v1.cuh  two_step_k_mer_filter_multi_gpu_v2.cuh  two_step_k_mer_filter_single_gpu_default.cuh  two_step_k_mer_filter_single_gpu_v1.cuh  two_step_k_mer_filter_single_gpu_v2.cuh  two_step_k_mer_filtered_calling_gpu_v1.cuh  two_step_k_mer_filtered_calling_host_v1.h
src/data analysis/: requirements.txt  visualize_error_model_result.py  visualize_index_operation_count_result.py  visualize_index_result.py  visualize_results.py
src/distance/: benchmark_sl_distance.cu  distance_measure.h  levenshtein_v1.cuh  levenshtein_v2.cuh  levenshtein_v3.cuh  pseudo_distance.h  pseudo_distance_all_v1.h  sequence_levenshtein_v3.cuh  sequence_levenshtein_v4.cuh  test_sl_distance.cu  weighted_levenshtein_v1.cuh  weighted_sequence_levenshtein_v1.cuh
src/java/de/uni_halle/barcode_calling/: Main.java
src/java/de/uni_halle/barcode_calling/callers/: BarcodeCaller.java  DistanceMeasureBase.java  FilteredKMerCaller.java  IndexCaller.java  KMerCaller.java  LevenshteinBase.java  MaxDistLevenshteinCaller.java  MaxDistSequenceLevenshteinCaller.java  MaxDistanceCaller.java  NaiveCaller.java  NaiveLevenshteinCaller.java  NaiveSequenceLevenshteinCaller.java  SequenceLevenshteinBase.java  TrimerCaller.java
src/java/de/uni_halle/barcode_calling/callers/indexes/: KMerIndex.java  KMerIndexCounter.java  OrderedIndex.java  PressCommunicator.java  TrimerIndexOutsourced.java
src/java/de/uni_halle/barcode_calling/exceptions/: FaultySequenceException.java  MissingParameterException.java  UnknownBaseException.java
src/java/de/uni_halle/barcode_calling/experiments/: ArtificialDatasetCallingExperiment.java  ArtificialDatasetIndexCallingExperiment.java  CallingExperiment.java  ErrorModelComparison.java  Experiment.java  Main.java  OperationCountAnalysis.java  OrderedIndexAnalysis.java  PrecisionPredictionExperiment.java
src/java/de/uni_halle/barcode_calling/experiments/data/: DNAErrorModel.java  Main.java
src/java/de/uni_halle/barcode_calling/util/: DNABase.java  DNASequence.java  IOMethods.java  KMer.java  Sorting.java  Tuples.java  UtilMethods.java
src/java/de/uni_halle/barcode_calling/util/datasets/: BarcodeDataset.java  Dataset.java  DatasetAnalyzer.java  LabeledDataset.java  ReadDataset.java
src/press_2022/: calc_triage_recall.py  decode_reads.py  decode_reads_test.sh  generate_barcodes.py  generate_reads.py  init_venv.sh  install_cuda_drivers.sh  install_press.sh  java_communicator.py  pickle_barcodes.py  requirements.txt  util.py
